app/assets/stylesheets/scrapers.css.scss
// Place all the styles related to the scrapers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.table-responsive.scraper-data {
  .tablesaw-enhanced & {
    @include tablesaw-stack( $grid-float-breakpoint );

    @media (min-width: $grid-float-breakpoint) {
      overflow: scroll;
    }

    tr {
      @media (max-width: $grid-float-breakpoint) {
        border-bottom: 2px solid $gray;
      }
    }
  }

  html:not(.tablesaw-enhanced) & {
    overflow: scroll;
  }

  table {
    max-width: 100%;

    @media (min-width: $grid-float-breakpoint) {
      width: auto;
    }

    td, th {
      .tablesaw-enhanced & {
        @media (max-width: $grid-float-breakpoint) {
          border-right: 0;
          border-left: 0;
          border-top: 0;
        }
      }

      html:not(.tablesaw-enhanced) & {
        max-width: 200px;
        overflow: hidden;
        white-space: nowrap;
      }
    }
  }

  // override bootstrap styles for better compatability
  // with TableSaw
  .tablesaw-enhanced & .tablesaw > tbody > tr > td {
    white-space: normal;

    @media (min-width: $grid-float-breakpoint) {
      white-space: nowrap;
    }
  }
}

.tablesaw-cell-content {
  a {
    word-wrap: break-word;

    @media (min-width: $grid-float-breakpoint) {
      word-wrap: inherit;
    }
  }
}

.panel-scrollable {
  table {
    width: 100%;
  }

  td, th {
    @media (min-width: $grid-float-breakpoint) {
      max-width: 200px;
      overflow: hidden;
    }

    html:not(.tablesaw-enhanced) & {
      max-width: 200px;
      overflow: hidden;
      white-space: nowrap;
    }
  }
}

// TODO: Rewrite these masks and gradients in
//        prefixed syntax and let Autoprefixer do it's thing
.panel-scrolled-right {
  -webkit-mask:
    -webkit-linear-gradient(
      right,
      rgba(255,255,255,1) 95%,
      rgba(255,255,255,.5) 97.5%,
      rgba(255,255,255,0)
    );
  ;
}

.panel-scrolled-left {
  -webkit-mask:
    -webkit-linear-gradient(
      left,
      rgba(255,255,255,1) 95%,
      rgba(255,255,255,.5) 97.5%,
      rgba(255,255,255,0)
    );
  ;
}

.panel-scrolled-middle {
  -webkit-mask:
    -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(2.5%,rgba(255,255,255,.5)), color-stop(5%,rgba(255,255,255,1)), color-stop(95%,rgba(255,255,255,1)), color-stop(97.5%,rgba(255,255,255,.5)), color-stop(100%,rgba(255,255,255,0)));
  ;
}

.popover-content {
  word-wrap: break-word;
}

span.stderr {
  color: #e00;
}

span.internalerr {
  color: #a00;
}

span.internalout {
  color: #0a0;
}

.icon-box {
  width: 15px;
  height: 15px;
}

.spinner {
  width: 1em;
  height: 1em;

  position: relative;
  display: inline-block;
  vertical-align: bottom;
}

.double-bounce1, .double-bounce2 {
  width: 85%;
  height: 85%;
  border-radius: 50%;
  background-color: #333;
  opacity: 0.6;
  position: absolute;
  top: 0.05em;
  left: 0;

  -webkit-animation: bounce 2.0s infinite ease-in-out;
  animation: bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes bounce {
  0%, 100% { -webkit-transform: scale(0.0) }
  50% { -webkit-transform: scale(1.0) }
}

@keyframes bounce {
  0%, 100% {
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 50% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

.panel.panel-danger {
  margin-top: 5em;
}

#console_title:after {
    content: "(hide)";
}
#console_title.collapsed:after {
    content: "(show)";
}

#scraper_settings {
  margin-bottom: 4em;
}

#scraper_run input {
  width: 200px;
}

// Workaround for copy to clipboard
#copy_to_clipboard_button.zeroclipboard-is-hover {
  background-color:#ebebeb;
  border-color: #adadad;
}
#copy_to_clipboard_button.zeroclipboard-is-active {
  background-color:#ebebeb;
  border-color: #adadad;
  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}

a i.fa-clock-o {
  text-decoration: none;
}

.scraper-block {
  overflow: hidden;
  text-overflow: ellipsis;
  .full_name {
    word-break: break-all;
  }
}

h1.full_name {
  overflow: hidden;
  text-overflow: ellipsis;
}

.log_lines {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.428571429;
  color: #333333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #cccccc;
  border-radius: 4px;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  height: 15em;
  overflow-y: scroll;
  resize: both;
  overflow: auto;
}

.log_line {
  white-space: pre;
}

.watch-button {
  form, .badge {
    display: inline-block;
  }
  .badge {
     margin-left: 0.5em;
  }
}

form.edit_scraper {
  .nested-fields label {
    display: none;
  }
  .links {
    margin-bottom: 1em;
  }
}

a i.fa {
  text-decoration: none;
}

.filter-option img, .selectpicker img {
  margin-right: 0.5em;
}

